Select institution during survey import (work in progress)

--- a/collect-web/collect-webapp/src/main/webapp/WEB-INF/view/zul/designer/component/new_survey_parameters_popup.zul
+++ b/collect-web/collect-webapp/src/main/webapp/WEB-INF/view/zul/designer/component/new_survey_parameters_popup.zul
@@ -45,13 +45,12 @@
 				</row>
 				<row>
 					<label value="${labels.survey.template.institution.$}:" />
-					<radiogroup model="@load(vm.institutionModel)" 
-						selectedItem="@bind(fx.institution)"
-						orient="vertical">
+					<listbox model="@load(vm.institutionModel)" mold="select"
+						selectedItem="@bind(fx.institution)">
 						<template name="model">
-							<radio label="${each.label}" value="${each.label}" />
+							<listitem label="${each.label}" value="${each.code}" />
 						</template>
-					</radiogroup>
+					</listbox>
 				</row>
 			</rows>
 		</grid>
